# borg-hive

./: .coveragerc  .env  .gitignore  .gitmodules  .pylintrc  .travis.yml  Dockerfile  Dockerfile.base  Dockerfile.borg  Dockerfile.nginx  README.md  README.rst  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  uwsgi.ini
borg/: 001-borg-log.patch  authorized-keys-check  init.sh  nsswitch.conf  pam-http-1.0.0-Linux.deb  pam-sshd.conf  requirements.in  requirements.txt  rrsync  rsyslog.conf  sshd_config
docs/: backup.rst  conf.py  develop.rst  development.rst  index.rst  installation.rst  internals.rst  notes  quickstart.rst  requirements.in  requirements.txt  usage.rst
helm/: Chart.yaml  README.md  values.db.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
scripts/: init.sh
src/api/: apps.py  router.py  urls.py
src/api/lib/: serializers.py  viewsets.py
src/api/serializers/: __init__.py  key.py  repo.py  user.py
src/api/tests/: test_key.py  test_repo.py
src/api/urls/: base.py  schema.py
src/borghive/: __init__.py  admin.py  apps.py  managers.py  mixins.py  signals.py  urls.py
src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/static/: 500.html  login.html
src/templates/: 403.html  404.html  500.html  base.html  messages.html  navigation-header.html  navigation.html
(+142 files in other folders)
