[tool.poetry]
name = "borg-hive"
version = "0.1.0"
description = "Borg Hive is a management interface for borgbackup repositories."
authors = ["Benjamin Pereto <dev@sandchaschte.ch>"]
license = "GPLv3"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
celery = "5.2.3"
django-celery-beat = "2.2.1"
django-crispy-forms = "1.14.0"
django-extensions = "3.1.5"
django-ldapdb = "1.5.1"
django-login-required-middleware = "0.7.0"
django-polymorphic = "3.1.0"
Django = "3.2.12"
djangorestframework-queryfields = "1.0.0"
djangorestframework = "3.13.1"
environs = "9.5.0"
inotify = "0.2.10"
mysqlclient = "2.0.3"
PyYAML = "6.0"
redis = "4.1.2"
requests = "2.27.1"
rules = "3.1"
sshpubkeys = "3.3.1"
uritemplate = "4.1.1"
setuptools = "59.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
